update: button disabled 処理

--- a/react-todo/src/App.css
+++ b/react-todo/src/App.css
@@ -125,6 +125,11 @@
   border-bottom-color: #956270;
 }
 
+.btn.is-disabled {
+  background-color: #ddd;
+  border-bottom-color: #ddd;
+}
+
 .checkbox-input {
   display: none;
 }
